<resources>
    <string name="app_name">TaxiBooking</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="verify">Verify</string>
    <string name="let_s_ride">Let\'s Ride</string>
    <string name="enter_your_mobile_number_to_login_or_register">Enter your mobile number to login or register</string>
    <string name="enter_the_4_digit_code_sent_to_your_nmobile_number">Enter the 4 digit code sent to your \nmobile number</string>
    <string name="hey_there">Hey there,</string>

    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="info">Information</string>
    <string name="warning">Warning</string>
    <string name="i_am_a_driver">I\'am a Driver</string>
    <string name="i_am_a_customer">I\'am a Customer</string>

    <string name="open">open</string>
    <string name="close">close</string>
</resources>