<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".presentation.screen.register.RegisterScreen">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDriver"
            style="@style/CustomChipMessagesScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/i_am_a_driver"
            android:textAllCaps="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCustomer"
            style="@style/CustomChipMessagesScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/i_am_a_customer"
            android:textAllCaps="true" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/titleNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How many seats do you have?"
        app:layout_constraintStart_toStartOf="@id/chipGroup"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"/>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/titleNumberPicker"
        app:layout_constraintBottom_toBottomOf="@id/titleNumberPicker"
        app:layout_constraintStart_toEndOf="@id/titleNumberPicker"
        />

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/let_s_ride"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberPicker" />

    <TextView
        android:id="@+id/registerTitleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/enter_your_mobile_number_to_login_or_register"
        android:textColor="@color/register_title_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <LinearLayout
        android:id="@+id/llNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/registerTitleContent"
        app:layout_constraintTop_toBottomOf="@id/registerTitleContent">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_arrowSize="16sp"
            app:ccp_autoFormatNumber="true"
            app:ccp_showArrow="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="16sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:maxLength="13"
            android:padding="10dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/yellow"
        android:text="@string/verify"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llNumber" />


</androidx.constraintlayout.widget.ConstraintLayout>